--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.sidkathuria14.database.MainActivity">
 
     <TextView
+        android:text="Enter Information to Store into DB"
+        android:textSize="40sp"
+        android:padding="20sp"
+        android:gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content" />
+ <EditText
+     android:padding="20sp"
+     android:layout_gravity="center"
+    android:id="@+id/etName"
+     android:hint="enter name"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content" />
+<EditText
+    android:padding="20sp"
+    android:layout_gravity="center"
+    android:id="@+id/etNumber"
+    android:hint="enter number"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
+    <Button
+        android:padding="20sp"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/btn"
+        android:text="enter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
